--- a/app/views/final-comments/v2/case-officer/appeal-not-found.html
+++ b/app/views/final-comments/v2/case-officer/appeal-not-found.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set serviceName = "Make a beta service appeal link" %}
+{% set serviceName = "Make an ‘Appeal a planning decision’ appeal link" %}
 
 {% set title = "Appeal not found" %}
 
@@ -9,12 +9,6 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukPhaseBanner({
-    tag: {
-      text: "Beta"
-    },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-  }) }}
   {{ govukBackLink({
     text: "Back",
     href: "javascript:history.go(-1);"
