--- a/app/views/final-comments/v2/case-officer/appeal.html
+++ b/app/views/final-comments/v2/case-officer/appeal.html
@@ -1,20 +1,14 @@
 {% extends "layout.html" %}
 
-{% set serviceName = "Make a beta service appeal link" %}
+{% set serviceName = "Make an ‘Appeal a planning decision’ appeal link" %}
 
-{% set title = "Appeal 123456" %}
+{% set title = "Section 78 appeal 123456" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukPhaseBanner({
-    tag: {
-      text: "Beta"
-    },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-  }) }}
   {{ govukBackLink({
     text: "Back",
     href: "javascript:history.go(-1);"
@@ -33,9 +27,13 @@
         {{ title  }}
       </label>
 
+      <p class="govuk-body govuk-!-margin-bottom-6">
+        Check this is the right appeal before making a final comments link.
+      </p>
+
       <dl class="govuk-summary-list">
 
-        <div class="govuk-summary-list__row">
+        {# <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Appeal type
           </dt>
@@ -44,9 +42,9 @@
               Section 78 appeal
             </p>
           </dd>
-        </div>
+        </div> #}
 
-        <div class="govuk-summary-list__row">
+        {# <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Appeal reference
           </dt>
@@ -55,11 +53,11 @@
               APP/123456
             </p>
           </dd>
-        </div>
+        </div> #}
 
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Named on the appeal
+            Appellant
           </dt>
           <dd class="govuk-summary-list__value">
 
@@ -81,7 +79,7 @@
           </dd>
         </div>
 
-        <div class="govuk-summary-list__row">
+        {# <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Contact details
           </dt>
@@ -89,7 +87,7 @@
             <p class="govuk-body">{{ data["enforcement-your-email"] or 'nickydavies@jambon.co.uk' }}</p>
             <p class="govuk-body">{{ data['enforcement-telephone'] or '01179428242' }}</p>
           </dd>
-        </div>
+        </div> #}
 
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
@@ -97,7 +95,7 @@
           </dt>
           <dd class="govuk-summary-list__value">
 
-            {{ data["enforcement-site-address-line1"] or '1 Providence Avenue' }}
+            {{ data["enforcement-site-address-line1"] or '1 Friary Buildings' }}
 
             {% if data["enforcement-site-address-line2"] %}
               <br>{{ data["enforcement-site-address-line2"] }}
@@ -106,7 +104,7 @@
             {% if data["enforcement-site-address-town"] %}
               <br>{{ data["enforcement-site-address-town"]}}
             {% else %}
-              <br>Jamton
+              <br>Bristol
             {% endif %}
 
             {% if data["enforcement-site-address-county"] %}
@@ -119,7 +117,7 @@
               <br>{{ data["enforcement-site-address-easting"] }}
               <br>{{ data["enforcement-site-address-northing"] }}
             {% else %}
-              <br>JM2 3BL
+              <br>BS1 6EA
             {% endif %}
           </dd>
 
@@ -127,7 +125,7 @@
 
         <div class="govuk-summary-list__row pins-summary-list__row--last">
           <dt class="govuk-summary-list__key">
-            Deadline for final comments
+            Appeal final comment window end
           </dt>
           <dd class="govuk-summary-list__value">
             <p class="govuk-body">
@@ -138,10 +136,6 @@
 
       </dl>
 
-      <p class="govuk-body govuk-!-margin-bottom-6">
-        Check this is the right appeal before making a final comments link.
-      </p>
-
       {# <div class="govuk-button-group">
         {{ govukButton({
           text: "Make a link"
@@ -149,16 +143,18 @@
       </div> #}
 
       <!-- button and link -->
-      <div class="govuk-button-group">
-        {{ govukButton({
-          text: "Make a final comments link"
-        }) }}
+      {# <div class="govuk-button-group"> #}
+        <p>
+          {{ govukButton({
+            text: "Make a link to this appeal"
+          }) }}
+        </p>
         <p>
           <a href="appeal-search">
-            Go back and use a different number
+            Go back and look for another appeal
           </a>
         </p>
-      </div>
+      {# </div> #}
 
     </form>
 
