--- a/app/views/final-comments/v2/case-officer/before-you-continue.html
+++ b/app/views/final-comments/v2/case-officer/before-you-continue.html
@@ -1,22 +1,14 @@
-{% set pageref = "" %}
 {% extends "layout.html" %}
 
-{% set serviceName = "Appeal a planning decision" %}
+{% set serviceName = "Make an ‘Appeal a planning decision’ appeal link" %}
 
-{% set title = "You’ll need to submit some documents with your appeal" %}
+{% set title = "Make a beta service appeal link" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukPhaseBanner({
-    tag: {
-      text: "Beta"
-    },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-  }) }}
-
   {{ govukBackLink({
     text: "Back",
     href: "javascript:history.go(-1);"
@@ -36,43 +28,18 @@
 
     <section class="govuk-!-margin-bottom-6">
 
-      <p class="govuk-body">
-        Before you appeal, make sure you have:
+      <p class="govuk-body-l">
+        Use this mini-service to make an ‘Appeal a planning decision’ service appeal link to send to appellants.
       </p>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li>
-          your enforcement notice
-        </li>
-        <li>
-          any other documents to support your appeal
-        </li>
-      </ul>
 
     </section>
 
-    <p class="govuk-body">
-      You should have already chosen how you think the Planning Inspectorate should decide your appeal.
-    </p>
-
-    <div class="govuk-button-group">
-
-      <div class="govuk-button-group">
-        {{ govukButton({
-          href: "task-list",
-          text: "Continue to the appeal"
-        }) }}
-
-        {{ govukButton({
-          href: "appeal-saved",
-          text: "Save and come back later",
-          classes: "govuk-button--secondary"
-        }) }}
-      </div>
-
-    </div>
+    {{ govukButton({
+      href: "appeal-search",
+      text: "Continue"
+    }) }}
 
   </div>
-
 </div>
+
 {% endblock %}
