--- a/app/views/lawful-development-certificate/v2/appeal-details/site-visibility.html
+++ b/app/views/lawful-development-certificate/v2/appeal-details/site-visibility.html
@@ -19,7 +19,7 @@
     classes: '',
     fieldset: {
       legend: {
-        html: 'Is the site or subject of the appeal visible from a public road or footpath?',
+        html: 'Is the subject of the appeal visible from a public road or footpath?',
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
