--- a/app/views/lawful-development-certificate/v2/task-list.html
+++ b/app/views/lawful-development-certificate/v2/task-list.html
@@ -245,7 +245,7 @@
               },
               {
                 key: {
-                  html: 'Site visible'
+                  html: 'Visible'
                 },
                 value: {
                   html: 'No<br>'+data['site-visibilityy__details'] if data['site-visibilityy'] == 'No' else 'Yes'
