--- a/app/views/lawful-development-certificate/v2/appeal-details/procedure--reason.html
+++ b/app/views/lawful-development-certificate/v2/appeal-details/procedure--reason.html
@@ -7,7 +7,7 @@
     value: data['procedure-reason'],
     rows: '5',
     label: {
-      html: 'Why would you prefer an '+ (data['procedure'] | lower or 'inquiry') +'?',
+      html: 'Why would you prefer a '+ (data['procedure'] | lower or 'inquiry') +'?',
       classes: 'govuk-label--l',
       isPageHeading: true
     }
