--- a/app/views/lawful-development-certificate/v2/uploads/common-ground-check.html
+++ b/app/views/lawful-development-certificate/v2/uploads/common-ground-check.html
@@ -6,7 +6,7 @@
     name: 'common-ground-check',
     fieldset: {
       legend: {
-        html: 'Do you have any a draft statement of common ground?',
+        html: 'Do you have a draft statement of common ground?',
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
