--- a/app/views/lawful-development-certificate/v2/invite/email-address.html
+++ b/app/views/lawful-development-certificate/v2/invite/email-address.html
@@ -5,9 +5,9 @@
     Invite someone to your appeal
   </h1>
 
-  <p>This will let you give other people access to your appeal.</p>
+  <p>This will give other people access to your appeal.</p>
 
-  <p>They will able to view and change everything you have entered, as well as being able to add details and submit the appeal on your behalf.</p>
+  {# <p>They will able to view and change everything you have entered, as well as being able to add details and submit the appeal on your behalf.</p> #}
 
   {{ govukInsetText({
     html: 'This cannot be undone.'
