--- a/app/views/lawful-development-certificate/v2/task-list.html
+++ b/app/views/lawful-development-certificate/v2/task-list.html
@@ -120,10 +120,10 @@
               },
               {
                 key: {
-                  html: 'Appellant&rsquo;s name'
+                  html: 'Their name'
                 },
                 value: {
-                  html: (data['appellant-first-name']+' '+data['appellant-last-name'] if data['appellant-first-name'] else 'Chris Armstrong')
+                  html: (data['appellant-first-name']+' '+data['appellant-last-name'] if data['appellant-first-name'] else 'Joe Bloggs')
                 }
                 if data['appellant-name-complete'] else
                 {
