Updated case office journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -82,10 +82,35 @@
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     <h3 class="govuk-heading-s">
+                      Final comments v3
+                      {{ govukTag({
+                        classes: "govuk-tag--blue govuk-!-margin-left-1",
+                        text: "In progress"
+                      }) }}
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="/final-comments/v3/documents-email">
+                          Submit comments journey
+                        </a>
+                      </li>
+                      <li>
+                        <a href="/final-comments/v3/create-link/appeal-search">
+                          Create link journey
+                        </a>
+                      </li>
+                    </ul>
+
+                  </div>
+
+
+
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    <h3 class="govuk-heading-s">
                       Final comments v2
                       {{ govukTag({
-                        classes: "govuk-tag--green  govuk-!-margin-left-1",
-                        text: "Ready for build"
+                        classes: "govuk-!-margin-left-1",
+                        text: "Done"
                       }) }}
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
@@ -146,7 +171,7 @@
                     <h3 class="govuk-heading-s">
                       Final comments v1
                       {{ govukTag({
-                        classes: "govuk-tag--blue govuk-!-margin-left-1",
+                        classes: "govuk-!-margin-left-1",
                         text: "Done"
                       }) }}
                     </h3>
