--- a/app/views/final-comments/v3/create-link/appeal-link.html
+++ b/app/views/final-comments/v3/create-link/appeal-link.html
@@ -10,7 +10,7 @@
   <p>Copy and paste the URL into your email:</p>
 
   {{ govukInsetText({
-    html: 'www.gov.uk/appeal-a-planning-decision/final-comments?app=d81vW7td12s4t5gff728y29'
+    html: 'http://www.gov.uk/appeal-a-planning-decision/final-comments?app=d81vW7td12s4t5gff728y29'
   }) }}
 
   <p class="govuk-!-margin-top-9">
