--- a/app/views/index.html
+++ b/app/views/index.html
@@ -90,9 +90,17 @@
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>
-                        <a href="/final-comments/v3/documents-email">
+                        <a href="/final-comments/v3/submit/start-email">
                           Submit comments journey
                         </a>
+
+                        <ul class="govuk-list govuk-list--bullet">
+                          <li>
+                            <a href="/final-comments/v3/submit/appeal-closed-for-comments">
+                              Closed for comments
+                            </a>
+                          </li>
+                        </ul>
                       </li>
                       <li>
                         <a href="/final-comments/v3/create-link/appeal-search">
