--- a/app/views/final-comments/v3/submit/confirmation.html
+++ b/app/views/final-comments/v3/submit/confirmation.html
@@ -1,54 +1,33 @@
-<!-- needs page ref -->
-<!-- {% set pageref = "BYS-002" %} -->
-
-{% extends "layout.html" %}
-
-{% set title = "Appeal submitted" %}
-
-{% block pageTitle %}
-  {{ title }} - Check your answers and submit your appeal - {{ serviceName }} - GOV.UK
-{% endblock %}
+{% extends location+"_layout.html" %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
-    tag: {
-      text: "Beta"
-    },
-    html: 'This is a new service - your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    tag: { text: 'Beta' },
+    html: 'This is a new service &ndash; your <a class="govuk-link" href="#feedback">feedback</a> will help us to improve it.'
   }) }}
 {% endblock %}
 
 {% block content %}
-
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
       {{ govukPanel({
-        titleHtml: title,
-        html: 'Your reference number<br><strong>ENF13579F</strong>'
+        titleHtml: 'Final comments submitted'
       }) }}
 
-      <!-- <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible"> -->
-
-      <p class="govuk-body">
-        We’ve sent you a confirmation email with a link to download a copy of your appeal.
+      <p>We&rsquo;ve sent you a confirmation email.
       </p>
 
-      {# {{ govukInsetText({
-        text: "You need to send a copy of your appeal to the local planning department."
-      }) }} #}
-
       <h2 class="govuk-heading-m">
-        What happens next?
+        What happens next
       </h2>
 
-      <p class="govuk-body">
-        We’ll check you’ve submitted everything we need to progress your appeal. We’ll contact you once we’ve done this.
+      <p>We&rsquo;ll check you&rsquo;ve submitted everything we need to progress your appeal. We&rsquo;ll contact you once we&rsquo;ve done this.</p>
+
+      <p>
+        <a href="#0">What did you think of this service?</a> (takes 30 seconds)
       </p>
 
     </div>
-
-
   </div>
-
 {% endblock %}
