--- a/app/views/final-comments/v3/submit/final-comments.html
+++ b/app/views/final-comments/v3/submit/final-comments.html
@@ -1,74 +1,78 @@
-{% extends "layout.html" %}
-
-{% set title = "Your final comments" %}
-
-{% block pageTitle %}
-  {{title}} - Tell us about the appeal site - GOV.UK
-{% endblock %}
+{% extends location+"_layout.html" %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
-    tag: {
-      text: "Beta"
-    },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-  }) }}
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:history.go(-1);"
+    tag: { text: 'Beta' },
+    html: 'This is a new service &ndash; your <a class="govuk-link" href="#feedback">feedback</a> will help us to improve it.'
   }) }}
 {% endblock %}
 
-{% block content %}
+{% block questions %}
+  <h1 class="govuk-heading-l">
+    Add final comments
+  </h1>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <p class="govuk-!-margin-bottom-2">Your final comments should only comment on the statements from the local planning authority or interested parties, and not include any new evidence.</p>
 
-    <form method="post">
+  <p>If you refer to any documents in your comments, for example photographs, you can upload them in the next step.</p>
 
-      <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="3000">
-        <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="final-comments">
-              {{ title }}
-            </label>
-          </h1>
-          <p class="govuk-body">
-            Before you start:
-          </p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>only comment on the statements from the local planning authority or interested parties</li>
-            <li>remove any sensitive or personal information</li>
-            <li>do not include any new evidence</li>
-          </ul>
+  {{ govukCharacterCount({
+    name: 'final-comments',
+    id: 'final-comments',
+    value: data['final-comments'],
+    rows: '8',
+    maxwords: '3000',
+    label: {
+      html: 'What are your final comments?',
+      classes: 'govuk-label--m'
+    }
+  }) }}
 
-          {% set sensitiveHtml %}
-            <p class="govuk-body">
-              Sensitive information refers to:
-            </p>
-            {% include "includes/sensitive-info-list.html" %}
-          {% endset -%}
+  <h2 class="govuk-heading-m">
+    Sensitive information
+  </h2>
 
-          {{ govukDetails({
-            summaryText: "What is sensitive information?",
-            html: sensitiveHtml
-          }) }}
+  <p>You cannot include any sensitive information in your comments. If you do, you&rsquo;ll be asked to resubmit, which will delay your appeal.</p>
 
-          <p class="govuk-hint">
-            Final comments must be 3000 words or less.
-          </p>
-          
-          <textarea class="govuk-textarea govuk-js-character-count" id="final-comments" name="final-comments" rows="6" aria-describedby="final-comments-info"></textarea>
-        </div>
+  {% set sensitiveHTML %}
+    <p class="govuk-!-margin-bottom-2">Sensitive information refers to:</p>
+    <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
+      <li>comments from children</li>
+      <li>information relating to children</li>
+      <li>information relating to health</li>
+      <li>information relating to crime</li>
+      <li>
+        any information relating to an individual&rsquo;s:
+        <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-0">
+          <li>race</li>
+          <li>ethnic origin</li>
+          <li>politics</li>
+          <li>religion</li>
+          <li>trade union membership</li>
+          <li>genetics</li>
+          <li>physical characteristics</li>
+          <li>sex life</li>
+          <li>sexual orientation</li>
+        </ul>
+      </li>
+    </ul>
+  {% endset -%}
 
-        <div id="final-comments-info" class="govuk-hint govuk-character-count__message">
-          Final comments must be 3000 characters or less.
-        </div>
+  {{ govukDetails({
+    summaryHtml: 'What is sensitive information?',
+    html: sensitiveHTML
+  }) }}
 
-      </div>
-
-      {% include "includes/button.html" %}
-
-    </form>
-  </div>
-</div>
+  {{ govukCheckboxes({
+    idPrefix: 'appeal-statement-confirmation',
+    name: 'appeal-statement-confirmation',
+    classes: 'checkboxes-long-text',
+    items: [
+      {
+        html: 'I confirm that I have not included any sensitive information in my final comments.',
+        value: 'I confirm that I have not included any sensitive information in my final comments.',
+        checked: checked('appeal-statement-confirmation','I confirm that I have not included any sensitive information in my final comments.')
+      }
+    ]
+  }) }}
 {% endblock %}
