--- a/app/views/final-comments/v3/submit/input-code.html
+++ b/app/views/final-comments/v3/submit/input-code.html
@@ -1,67 +1,38 @@
-{% set pageref = "" %}
-{% extends "layout.html" %}
-
-{% set serviceName = "Appeal a planning decision" %}
-
-{% set title = "Enter the code we sent to your email address" %}
-
-{% block pageTitle %}
-  {{ title }} - {{serviceName}} - GOV.UK
-{% endblock %}
+{% extends location+"_layout.html" %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
-    tag: {
-      text: "Beta"
-    },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+    tag: { text: 'Beta' },
+    html: 'This is a new service &ndash; your <a class="govuk-link" href="#feedback">feedback</a> will help us to improve it.'
+  }) }}
+{% endblock %}
+
+{% block questions %}
+  <h1 class="govuk-heading-l">
+    Check your email
+  </h1>
+
+  <p>We have sent a code to your email address. It might take a few minutes to arrive. The code will expire after 30 minutes.</p>
+
+  {{ govukInput({
+    id: 'save-return-code',
+    name: 'save-return-code',
+    value: data['save-return-code'],
+    classes: 'govuk-input--width-4',
+    label: {
+      html: 'What is the 4 digit security code?',
+      classes: 'govuk-label--m'
+    }
+  }) }}
+{% endblock %}
+
+{% block buttons %}
+  {{ govukButton({
+    html: 'Continue',
+    href: 'final-comments'
   }) }}
 
+  <p><a href="#0">Not received the code?</a></p>
 {% endblock %}
 
-{% block content %}
-
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-
-      <form method="post">
-
-        <span class="govuk-caption-l">{{ subServiceName }}</span>
-
-        <div class="govuk-form-group">
-
-          <label class="govuk-label govuk-label--l" for="email">
-            {{ title }}
-          </label>
-
-          <div class="govuk-form-group">
-            <input class="govuk-input govuk-input--width-5" id="email" name="email" type="text" spellcheck="false" autocomplete=none value="" style="text-transform:uppercase">
-          </div>
-
-        </div>
-
-        <div class="govuk-!-margin-bottom-6">
-          <p class="govuk-body">
-            <a href="request-code" class="govuk-!-margin-bottom-9">
-              Not received the code?
-            </a>
-          </p>
-        </div>
-
-        {% include "includes/button.html" %}
-
-      </form>
-
-      <!-- this is a prototype only link -->
-      <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
-        <p class="govuk-body-s pins-prototype-only">
-          <a href="appeal-closed-for-comments">
-            Appeal closed for comments
-          </a>
-        </p>
-      </div>
-
-    </div>
-  </div>
-
-{% endblock %}
+{% block pageScripts %}{% endblock %}
