--- a/app/views/final-comments/v3/submit/final-comments.html
+++ b/app/views/final-comments/v3/submit/final-comments.html
@@ -12,9 +12,9 @@
     Add final comments
   </h1>
 
-  <p class="govuk-!-margin-bottom-2">Your final comments should only comment on the statements from the local planning authority or interested parties, and not include any new evidence.</p>
+  <p>Your final comments should only respond to the statements from the local planning authority or interested parties, and must not include any new evidence.</p>
 
-  <p>If you refer to any documents in your comments, for example photographs, you can upload them in the next step.</p>
+  <p>If you want to add documents to support your comments, for example photographs, you can upload them in the next step.</p>
 
   {{ govukCharacterCount({
     name: 'final-comments',
@@ -32,7 +32,7 @@
     Sensitive information
   </h2>
 
-  <p>You cannot include any sensitive information in your comments. If you do, you&rsquo;ll be asked to resubmit, which will delay your appeal.</p>
+  <p>You must not include any sensitive information in your comments. If you do, you&rsquo;ll be asked to resubmit, which will delay your appeal.</p>
 
   {% set sensitiveHTML %}
     <p class="govuk-!-margin-bottom-2">Sensitive information refers to:</p>
