--- a/app/views/index.html
+++ b/app/views/index.html
@@ -257,6 +257,25 @@
               <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
 
+                  {# VERSION 3 #}
+                  {% set version = "3" %}
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
+                      Version {{version}}
+                      {{ govukTag({
+                        classes: "govuk-tag--pink govuk-!-margin-left-1",
+                        text: "Work in progress"
+                      }) }}
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/">Before you start</a></li>
+                      {# <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/cya">Before you start: Check your answers</a></li> #}
+                      <li><a href="/lawful-development-certificate/v{{version}}/task-list">Task list</a></li>
+                    </ul>
+                  </div>
+                  {# /VERSION 3 #}
+
                   {# VERSION 2 #}
                   {% set version = "2" %}
                   <div class="govuk-inset-text govuk-!-margin-top-0">
@@ -264,8 +283,8 @@
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
                       Version {{version}}
                       {{ govukTag({
-                        classes: "govuk-tag--pink govuk-!-margin-left-1",
-                        text: "WIP"
+                        classes: "govuk-!-margin-left-1",
+                        text: "Researched"
                       }) }}
                     </h3>
                     <p>Reintroduced the task list, but a blend of that and a check your answers page.</p>
@@ -275,7 +294,7 @@
                       <li><a href="/lawful-development-certificate/v{{version}}/task-list">Task list</a></li>
                     </ul>
                   </div>
-                  {# /VERSION 1 #}
+                  {# /VERSION 2 #}
 
                   {# VERSION 1 #}
                   {% set version = "1" %}
@@ -284,7 +303,7 @@
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
                       Version {{version}}
                       {{ govukTag({
-                        classes: "govuk-tag--blue govuk-!-margin-left-1",
+                        classes: "govuk-!-margin-left-1",
                         text: "Researched"
                       }) }}
                     </h3>
