--- a/app/views/lawful-development-certificate/v3/appeal-details/appellant-check.html
+++ b/app/views/lawful-development-certificate/v3/appeal-details/appellant-check.html
@@ -7,7 +7,7 @@
     classes: '',
     fieldset: {
       legend: {
-        html: 'Who&rsquo;s named on the application made to the local planning authority?',
+        html: 'Who was the applicant to the local planning authority?',
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
