--- a/app/views/lawful-development-certificate/v3/appeal-details/appellant-name.html
+++ b/app/views/lawful-development-certificate/v3/appeal-details/appellant-name.html
@@ -3,7 +3,7 @@
 {% block questions %}
   {% call govukFieldset({
     legend: {
-      html: 'What&rsquo;s the person&rsquo;s name?',
+      html: 'What&rsquo;s the appellant&rsquo;s name?',
       classes: 'govuk-fieldset__legend--l',
       isPageHeading: true
     }
