--- a/app/views/lawful-development-certificate/v3/appeal-details/contact-details.html
+++ b/app/views/lawful-development-certificate/v3/appeal-details/contact-details.html
@@ -3,7 +3,7 @@
 {% block questions %}
   {% call govukFieldset({
     legend: {
-    html: 'What are your contact details?',
+    html: 'What&rsquo;s your name?',
     classes: 'govuk-fieldset__legend--l',
     isPageHeading: true
     }
@@ -41,24 +41,6 @@
         html: 'Consultancy name (optional)'
       }
     }) }}
-
-    {% if data['save-email-confirmed'] %}
-      {{ govukInsetText({
-        html: 'You have confirmed your email for this appeal:<br>'+data['applicant-email']
-      }) }}
-    {% else %}
-      {{ govukInput({
-        id: 'applicant-email',
-        name: 'applicant-email',
-        value: data['applicant-email'],
-        label: {
-          html: 'Email address'
-        },
-        type: 'email',
-        autocomplete: 'email',
-        spellcheck: false
-      }) }}
-    {% endif %}
 
   {% endcall %}
 {% endblock %}
