--- a/app/views/lawful-development-certificate/v3/before-you-start/application-date.html
+++ b/app/views/lawful-development-certificate/v3/before-you-start/application-date.html
@@ -22,13 +22,13 @@
           namePrefix: 'application-date',
           fieldset: {
             legend: {
-              html: 'When was the application registered with the local planning authority?',
+              html: 'When was the application submitted to the local planning authority?',
               classes: 'govuk-fieldset__legend--l',
               isPageHeading: true
             }
           },
           hint: {
-            html: '<p>You can find the date on the letter confirming your application</p><p>For example, 31 3 2022</p>'
+            html: 'For example, 31 3 2022'
           },
           items: [
             {
