--- a/app/views/lawful-development-certificate/v3/save-and-return/confirmation-email.html
+++ b/app/views/lawful-development-certificate/v3/save-and-return/confirmation-email.html
@@ -24,12 +24,12 @@
     </p>
 
     <p class="govuk-body">
-      You must confirm your email address before we can save your appeal.
+      You must confirm your email address so we can contact you if we have any questions about your appeal.
     </p>
 
     <p class="govuk-body">
       Go to the link to confirm your email address:<br>
-      <a href="saved?save-email-confirmed=true">www.gov.uk/appeal-a-planning-decision/confirm-email/0722bb4b-6650-4046-8a9f-0ad0efdd3b2f</a>
+      <a href="confirmed">www.gov.uk/appeal-a-planning-decision/confirm-email/0722bb4b-6650-4046-8a9f-0ad0efdd3b2f</a>
     </p>
 
     <p class="govuk-body">
