--- a/app/views/lawful-development-certificate/v3/save-and-return/confirm.html
+++ b/app/views/lawful-development-certificate/v3/save-and-return/confirm.html
@@ -6,12 +6,12 @@
   </h1>
 
   {{ govukInsetText({
-    html: 'We&rsquo;ve sent an email to: '+data['applicant-email']
+    html: 'We&rsquo;ve sent an email to: '+(data['email-address'] or 'example@email.com')
   }) }}
 
   <p>Go to your inbox to confirm that this is the correct email address. The link in the email will expire after 30 minutes.</p>
 
-  <p>If it is wrong you can <a href="../appeal-details/contact-details?saving=true">change the email address you entered</a>.</p>
+  <p>If it is wrong you can <a href="email-address">change the email address you entered</a>.</p>
 
   <h2 class="govuk-heading-m">
     If you&rsquo;re having problems
