List of health and safety concerns visbile to everyone rather than details

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -270,7 +270,7 @@
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/">Before you start</a></li>
-                      {# <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/cya">Before you start: Check your answers</a></li> #}
+                      <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/cya">Before you start: Check your answers</a></li>
                       <li><a href="/lawful-development-certificate/v{{version}}/task-list">Task list</a></li>
                     </ul>
                   </div>
