--- a/app/views/index.html
+++ b/app/views/index.html
@@ -264,8 +264,8 @@
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
                       Version {{version}}
                       {{ govukTag({
-                        classes: "govuk-tag--pink govuk-!-margin-left-1",
-                        text: "Work in progress"
+                        classes: "govuk-tag--green govuk-!-margin-left-1",
+                        text: "Ready for dev"
                       }) }}
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
