Link to exit page

--- a/app/views/before-you-start/v13/appeal-type.html
+++ b/app/views/before-you-start/v13/appeal-type.html
@@ -1,4 +1,5 @@
 {% extends location+"_layout.html" %}
+{% set prototypeLinks = [{href: 'errors/certain-types', text: 'Advertisement and DN not included yet'}] %}
 
 {% block questions %}
   {{ govukRadios({
