error content update

--- a/app/views/before-you-start/v13/errors/lpa-has-more-time.html
+++ b/app/views/before-you-start/v13/errors/lpa-has-more-time.html
@@ -5,7 +5,7 @@
     You cannot appeal yet
   </h1>
 
-  <p>Your local planning department has 8 weeks to reply to your application.</p>
+  <p>Your local planning authority has 8 weeks to reply to your application.</p>
 {% endblock %}
 
 {% block buttons %}{% endblock %}
