--- a/app/views/before-you-start/v13/errors/no-enforcement.html
+++ b/app/views/before-you-start/v13/errors/no-enforcement.html
@@ -7,12 +7,12 @@
 
   <p>This new service is only for appeals that do not involve an enforcement notice.</p>
 
-  <p>You need to submit your appeal using the existing service, the Appeals Casework Portal.</p>
+  <p>You can submit your appeal using the existing service, the Appeals Casework Portal.</p>
 
   <h2 class="govuk-heading-m">
-    How to begin your appeal
+    How to start your appeal
   </h2>
-  <p>To begin your appeal, log in or register on the Appeals Casework Portal.</p>
+  <p>To start your appeal, log in or register on the Appeals Casework Portal.</p>
 {% endblock %}
 
 {% block buttons %}
