--- a/app/views/before-you-start/v13/errors/lpa-not-available.html
+++ b/app/views/before-you-start/v13/errors/lpa-not-available.html
@@ -5,14 +5,14 @@
     You need to use the existing service
   </h1>
 
-  <p>Your local planning department is not using this new service yet.</p>
+  <p>Your local planning authority is not using this new service yet.</p>
 
-  <p>You need to submit your appeal using the existing service, the Appeals Casework Portal.</p>
+  <p>You can submit your appeal using the existing service, the Appeals Casework Portal.</p>
 
   <h2 class="govuk-heading-m">
-    How to begin your appeal
+    How to start your appeal
   </h2>
-  <p>To begin your appeal, log in or register on the Appeals Casework Portal.</p>
+  <p>To start your appeal, log in or register on the Appeals Casework Portal.</p>
 {% endblock %}
 
 {% block buttons %}
