Updated with listed building included

--- a/app/views/before-you-start/v13/errors/no-major.html
+++ b/app/views/before-you-start/v13/errors/no-major.html
@@ -5,7 +5,7 @@
     You need to use the existing service
   </h1>
 
-  <p>This new service is only for appeals that are not about a listed building.</p>
+  <p>This new service is only for appeals about minor developments.</p>
 
   <p>You can submit your appeal using the existing service, the Appeals Casework Portal.</p>
 
