--- a/app/views/before-you-start/v13/planning/type.html
+++ b/app/views/before-you-start/v13/planning/type.html
@@ -26,6 +26,11 @@
 				checked: checked('planning-type','Householder planning')
 			},
 			{
+				html: 'Listed building consent',
+				value: 'Listed building consent',
+				checked: checked('planning-type','Listed building consent')
+			},
+			{
 				html: 'Outline planning',
 				value: 'Outline planning',
 				checked: checked('planning-type','Outline planning')
