BYS moved out of LB folder

--- a/app/views/before-you-start/v13/planning/major-development-check.html
+++ b/app/views/before-you-start/v13/planning/major-development-check.html
@@ -7,7 +7,7 @@
 		name: 'major-development-check',
 		fieldset: {
 			legend: {
-				html: 'Was your planning application about a major development?',
+				html: 'Was your planning application for a major development?',
 				classes: 'govuk-fieldset__legend--l',
 				isPageHeading: true
 			}
