--- a/app/views/lawful-development-certificate/v3/task-list.html
+++ b/app/views/lawful-development-certificate/v3/task-list.html
@@ -7,7 +7,7 @@
         Your appeal
       </h1>
 
-      <h2 class="govuk-heading-s">
+      <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
         Appeal incomplete
       </h2>
       <p>{{ ('Your deadline to appeal is ' + '168' | daysInFuture + '.') }}</p>
